--- a/w2v_hetzner.conf
+++ b/w2v_hetzner.conf
@@ -2,14 +2,14 @@
 server.socket_host = "127.0.0.1"
 server.socket_port = 8889
 server.thread_pool = 20
-log.access_file = '/var/log/w2v/access.log'
-log.error_file = '/var/log/w2v/error.log'
+log.access_file = 'd:\\logs\\w2v\\access.log'
+log.error_file = 'd:\\logs\\w2v\\error.log'
 environment = 'production'
 engine.autoreload.on = False
 engine.timeout_monitor.on = False
 
 [w2v_server]
-MODEL_FILE = "/data/w2v_googlenews/GoogleNews-vectors-negative300.bin.gz"
+MODEL_FILE = "D:\\big_data\\w2v_googlenews_zipped\\GoogleNews-vectors-negative300.bin\\GoogleNews-vectors-negative300.bin"
 
 [/]
 tools.decode.on = True
